add graphic selection page